test/corpus/contagion.txt
===========
Contagion 1
===========

contagion c1
    state type c1_state_t

    transition
        E -> I, p = p_E_I , dwell = fixed1
        I -> R, dwell = normal1
    end

    transmission
        E => S -> E
        E => V -> E
        I => S -> E
        I => V -> E
    end

    susceptibility = c1_susceptibility
    infectivity = c1_infectivity
    transmissibility = c1_transmissibility
end

---

(source_file
    (contagion
        name: (identifier)
        body: (contagion_state_type
            type: (reference (identifier))
        )
        body: (transitions
            body: (transition
                entry: (reference (identifier))
                exit: (reference (identifier))
                p: (reference (identifier))
                dwell: (reference (identifier))
            )
            body: (transition
                entry: (reference (identifier))
                exit: (reference (identifier))
                dwell: (reference (identifier))
            )
        )
        body: (transmissions
            body: (transmission
                contact: (reference (identifier))
                entry: (reference (identifier))
                exit: (reference (identifier))
            )
            body: (transmission
                contact: (reference (identifier))
                entry: (reference (identifier))
                exit: (reference (identifier))
            )
            body: (transmission
                contact: (reference (identifier))
                entry: (reference (identifier))
                exit: (reference (identifier))
            )
            body: (transmission
                contact: (reference (identifier))
                entry: (reference (identifier))
                exit: (reference (identifier))
            )
        )
        body: (contagion_function function: (reference (identifier)))
        body: (contagion_function function: (reference (identifier)))
        body: (contagion_function function: (reference (identifier)))
    )
)
