test/corpus/edge.txt
======
Edge 1
======

edge
    pid1: int static target node key
    pid2: int static source node key
    activity1: activity_t static
    activity2: activity_t static
    duration: float
    dynamic_edge_attr: float save
end

---

(source_file
    (edge
        field: (edge_field
            name: (identifier)
            type: (identifier)
            annotation: (edge_annotation)
            annotation: (edge_annotation)
        )
        field: (edge_field
            name: (identifier)
            type: (identifier)
            annotation: (edge_annotation)
            annotation: (edge_annotation)
        )
        field: (edge_field
            name: (identifier)
            type: (identifier)
            annotation: (edge_annotation)
        )
        field: (edge_field
            name: (identifier)
            type: (identifier)
            annotation: (edge_annotation)
        )
        field: (edge_field
            name: (identifier)
            type: (identifier)
        )
        field: (edge_field
            name: (identifier)
            type: (identifier)
            annotation: (edge_annotation)
        )
    )
)
