test/corpus/enum.txt
======
Enum 1
======

enum gender_t
    M, F
end

enum gender_t M, F end

---

(source_file
    (enum
        name: (identifier)
        constant: (identifier)
        constant: (identifier)
    )

    (enum
        name: (identifier)
        constant: (identifier)
        constant: (identifier)
    )
)
