test/corpus/function.txt
==========
Function 1
==========

def func(a: int, b: float) -> float:
    pass
end

---

(source_file
    (function
        name: (identifier)
        parameter: (parameter
            name: (identifier)
            type: (identifier)
        )
        parameter: (parameter
            name: (identifier)
            type: (identifier)
        )
        type: (identifier)
        body: (pass_statement)
    )
)

==========
Function 2
==========

def func() -> int:
    pass
end

def func():
    pass
end

---

(source_file
    (function
        name: (identifier)
        type: (identifier)
        body: (pass_statement)
    )
    (function
        name: (identifier)
        body: (pass_statement)
    )
)

=================
Lambda Function 1
=================

__test expression:
    lambda (n) { pass }
end

---

(source_file
    (test_expression
        (lambda_function
            parameter: (lambda_parameter
                name: (identifier)
            )
            body: (pass_statement)
        )
    )
)

=================
Lambda Function 2
=================

__test expression:
    lambda (n) n.a
end

---

(source_file
    (test_expression
        (lambda_function
            parameter: (lambda_parameter
                name: (identifier)
            )
            return_expression: (reference
                (identifier)
                (identifier)
            )
        )
    )
)
