test/corpus/parallel_statement.txt
====================
Parallel Statement 1
====================

__test statement:
    from node
    filter some_filter
    apply some_function
end

---

(source_file
    (test_statement
        (parallel_statement
            (filter_clause (reference (identifier)))
            (apply_clause (reference (identifier)))
        )
    )
)

====================
Parallel Statement 2
====================

__test statement:
    from node
    sample ABSOLUTE 5
    apply some_function
end

---

(source_file
    (test_statement
        (parallel_statement
            (sample_clause (integer))
            (apply_clause (reference (identifier)))
        )
    )
)

====================
Parallel Statement 3
====================

__test statement:
    from node
    filter some_filter
    reduce var1 += some_function
end

---

(source_file
    (test_statement
        (parallel_statement
            (filter_clause (reference (identifier)))
            (reduce_clause
                (reference (identifier))
                (reference (identifier))
            )
        )
    )
)

====================
Parallel Statement 4
====================

__test statement:
    from node
    filter some_filter
    reduce var1 += some_function
    reduce var2 += some_function
end

---

(source_file
    (test_statement
        (parallel_statement
            (filter_clause (reference (identifier)))
            (reduce_clause
                (reference (identifier))
                (reference (identifier))
            )
            (reduce_clause
                (reference (identifier))
                (reference (identifier))
            )
        )
    )
)

====================
Parallel Statement 5
====================

__test statement:
    from node
    filter lambda (v: node) -> bool { pass }
    apply lambda (v) { pass }
end

---

(source_file
    (test_statement
        (parallel_statement
            (filter_clause
                function: (lambda_function
                    parameter: (lambda_parameter
                        name: (identifier)
                        type: (identifier)
                    )
                    type: (identifier)
                    body: (pass_statement)
                )
            )
            (apply_clause
                function: (lambda_function
                    parameter: (lambda_parameter
                        name: (identifier)
                    )
                    body: (pass_statement)
                )
            )
        )
    )
)

====================
Parallel Statement 6
====================

__test statement:
    from node
    filter lambda (v: node) -> bool True
    apply lambda (v) { pass }
end

---

(source_file
    (test_statement
        (parallel_statement
            (filter_clause
                function: (lambda_function
                    parameter: (lambda_parameter
                        name: (identifier)
                        type: (identifier)
                    )
                    type: (identifier)
                    return_expression: (boolean)
                )
            )
            (apply_clause
                function: (lambda_function
                    parameter: (lambda_parameter
                        name: (identifier)
                    )
                    body: (pass_statement)
                )
            )
        )
    )
)
